# frontroomsbot

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
ansible/: playbook.yaml
frontroomsbot/: __init__.py  bookmarks.py  bot.py  config.toml  consts.py  requirements.txt
frontroomsbot/cogs/: _config.py  aaa_extensions.py  avatar_emoji.py  beer_tracker.py  config.py  config_cog.py  devtools.py  events.py  image_gen.py  imitation.py  llm.py  message_utils.py  misc.py  pin_squash.py  random_utils.py  reaction_utils.py  shot_tracker.py  string_utils.py  substance_tracker.py  superkauf.py  tldr.py  translation.py
frontroomsbot/cogs/utils/: bookmarks.py
tests/: test_event_manager.py  test_events.py
