[tool.poetry]
name = "frontroomsbot"
version = "0.1.0"
description = ""
authors = ["S1ro1 <matej.sirovatka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.8"
black = "^23.12.0"
discord-py = "^2.3.2"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"