[tool.poetry]
name = "frontroomsbot"
version = "0.1.0"
description = ""
authors = ["S1ro1 <matej.sirovatka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.8"
black = "^23.12.0"
discord-py = "^2.3.2"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
httpx = {extras = ["socks"], version = "^0.26.0"}
pytz = "^2023.3.post1"
toml = "^0.10.2"
motor = "^3.3.2"
websockets = "^12.0"
pillow = "^10.4.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
